--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/animations.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     
     <!-- Scripts -->
@@ -108,5 +109,10 @@
 
     <!-- Footer -->
     <div id="footer-placeholder"></div>
+    <script type="module">
+        import { loadComponent } from './scripts/components.js';
+        loadComponent('#header-placeholder', 'components/header.html');
+        loadComponent('#footer-placeholder', 'components/footer.html');
+      </script>
 </body>
 </html>
