--- a/get-involved.html
+++ b/get-involved.html
@@ -6,95 +6,241 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Involved - Gjenge Earth Foundation</title>
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Links -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/animations.css">
+    <!-- <link rel="stylesheet" href="styles/main.css"> -->
+    <!-- <link rel="stylesheet" href="styles/animations.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script type="module">
-        import { loadComponents } from './scripts/components/navigation.js';
-        document.addEventListener('DOMContentLoaded', () => {
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script> -->
+    <!--
+    <script type=\"module\">
+        import { loadComponents } from \'./scripts/components/navigation.js\';
+        document.addEventListener(\'DOMContentLoaded\', () => {
             loadComponents();
         });
     </script>
+    -->
 </head>
 <body>
     <!-- Navigation -->
      <div id="header-placeholder"></div>
+
     <!-- Hero Commitment Wall -->
-     
-    <section class="commitment-hero">
-        <div class="pledge-grid">
-            <div class="pledge-card" data-pledge="donor">
-                <div class="pledge-sparkles"></div>
-                <h2>I Want to Donate</h2>
-                <div class="pledge-commitment"></div>
+    <section class="py-5 text-center bg-light">
+        <div class="container">
+            <h1 class="display-4 mb-4">Make a Difference</h1>
+            <p class="lead mb-5">Choose how you want to contribute to a sustainable future.</p>
+            <div class="row justify-content-center g-4">
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body d-flex flex-column">
+                            <h2 class="card-title h4">I Want to Donate</h2>
+                            <p class="card-text">Your contribution, big or small, helps us empower communities and recycle waste.</p>
+                            <a href="#donation-path" class="btn btn-primary mt-auto">Donate Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body d-flex flex-column">
+                            <h2 class="card-title h4">I Want to Partner</h2>
+                            <p class="card-text">Collaborate with us to amplify our impact and achieve shared sustainability goals.</p>
+                            <a href="#partnership-tiers" class="btn btn-success mt-auto">Become a Partner</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body d-flex flex-column">
+                            <h2 class="card-title h4">I Want to Volunteer</h2>
+                            <p class="card-text">Join our team of passionate individuals and contribute your skills to our projects.</p>
+                            <a href="#volunteer-opportunities" class="btn btn-info mt-auto text-white">Volunteer With Us</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="pledge-card" data-pledge="partner">
-                <div class="pledge-sparkles"></div>
-                <h2>I Want to Partner</h2>
-                <div class="pledge-commitment"></div>
-            </div>
-            <!-- Add Volunteer Card -->
         </div>
     </section>
 
     <!-- Interactive Donation Flow -->
-    <section class="donation-path">
-        <div class="donation-stepper">
-            <div class="step-indicator active" data-step="1">Amount</div>
-            <div class="step-indicator" data-step="2">Details</div>
-            <div class="step-indicator" data-step="3">Confirm</div>
-        </div>
-
-        <div class="donation-options">
-            <div class="amount-card" data-amount="50">
-                <div class="amount-badge">Most Impact</div>
-                <h3>$50</h3>
-                <p>Supports 1 waste collector for a week</p>
+    <section id="donation-path" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Support Our Cause</h2>
+            <!-- Donation Stepper (Simplified) -->
+            <div class="progress mb-4" style="height: 20px;">
+                <div class="progress-bar" role="progressbar" style="width: 33%;" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">Step 1: Amount</div>
             </div>
-            <!-- Other amount cards -->
+
+            <div class="row justify-content-center g-4">
+                <div class="col-md-4">
+                    <div class="card text-center h-100">
+                        <div class="card-header bg-primary text-white">
+                            Most Impact
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title display-5">$50</h3>
+                            <p class="card-text">Supports 1 waste collector for a week.</p>
+                            <button class="btn btn-primary">Choose Amount</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center h-100">
+                        <div class="card-body">
+                            <h3 class="card-title display-5">$100</h3>
+                            <p class="card-text">Provides materials for a community workshop.</p>
+                            <button class="btn btn-outline-primary">Choose Amount</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center h-100">
+                        <div class="card-body">
+                            <h3 class="card-title display-5">Custom</h3>
+                            <p class="card-text">Enter your preferred donation amount.</p>
+                            <input type="number" class="form-control mb-2" placeholder="Enter amount">
+                            <button class="btn btn-outline-primary">Donate Custom</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="text-center mt-4"><em>Further steps (Details & Confirm) would be part of a full donation form.</em></p>
         </div>
     </section>
 
     <!-- Partnership Tier Visualizer -->
-    <div class="tier-comparison">
-        <div class="tier-card" data-tier="supporter">
-            <div class="tier-progress"></div>
-            <h3>Community Supporter</h3>
-            <button class="tier-cta">Join</button>
+    <section id="partnership-tiers" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5">Partnership Opportunities</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
+                            <h3 class="h5 mb-0">Community Supporter</h3>
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <p class="card-text">Logo placement on our website, social media mentions.</p>
+                            <button class="btn btn-success mt-auto">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 text-center border-primary">
+                         <div class="card-header bg-primary text-white">
+                            <h3 class="h5 mb-0">Impact Partner</h3>
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <p class="card-text">Enhanced visibility, joint press releases, project collaboration opportunities.</p>
+                            <button class="btn btn-primary mt-auto">Become an Impact Partner</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
+                            <h3 class="h5 mb-0">Strategic Ally</h3>
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <p class="card-text">Customized partnership, co-creation of initiatives, prominent branding.</p>
+                            <button class="btn btn-success mt-auto">Discuss Strategic Alliance</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- Add other tiers -->
-    </div>
+    </section>
 
     <!-- Volunteer Skill Matrix -->
-    <div class="skill-grid">
-        <div class="skill-node" data-skill="education">
-            <div class="skill-progress"></div>
-            <h4>Community Education</h4>
+    <section id="volunteer-opportunities" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Volunteer Your Skills</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card text-center h-100">
+                        <div class="card-body">
+                            <i class="bi bi-megaphone-fill fs-1 text-info mb-3"></i> <!-- Placeholder for icon -->
+                            <h4 class="card-title">Community Education</h4>
+                            <p class="card-text">Help us run workshops and awareness campaigns.</p>
+                            <a href="contact.html?subject=volunteer-education" class="btn btn-info text-white">Offer Your Skills</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center h-100">
+                        <div class="card-body">
+                            <i class="bi bi-tools fs-1 text-info mb-3"></i> <!-- Placeholder for icon -->
+                            <h4 class="card-title">Logistics & Operations</h4>
+                            <p class="card-text">Support our collection and recycling processes.</p>
+                            <a href="contact.html?subject=volunteer-logistics" class="btn btn-info text-white">Offer Your Skills</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center h-100">
+                        <div class="card-body">
+                            <i class="bi bi-palette-fill fs-1 text-info mb-3"></i> <!-- Placeholder for icon -->
+                            <h4 class="card-title">Creative & Media</h4>
+                            <p class="card-text">Assist with content creation, design, and storytelling.</p>
+                            <a href="contact.html?subject=volunteer-media" class="btn btn-info text-white">Offer Your Skills</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <p class="text-center mt-4">Use Bootstrap Icons or Font Awesome for actual icons.</p>
         </div>
-        <!-- Add other skills -->
-    </div>
+    </section>
 
-    <!-- Impact Simulator -->
-    <div class="impact-calculator">
-        <div class="simulator-visual">
-            <div class="plastic-counter">0</div>
-            <div class="tree-equivalent">= 0 Trees</div>
+    <!-- Impact Simulator (Simplified) -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Visualize Your Impact</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <label for="donationSlider" class="form-label">Donation Amount: <span id="donationValue">$500</span></label>
+                    <input type="range" class="form-range" id="donationSlider" min="0" max="1000" value="500" oninput="updateImpact(this.value)">
+                    <div class="text-center mt-3">
+                        <p class="lead">Your <strong id="simulatedDonation">$500</strong> donation can help recycle <strong id="plasticCounter">X kg</strong> of plastic, equivalent to saving <strong id="treeEquivalent">Y trees</strong>.</p>
+                        <small>(Note: This is a simplified simulator for illustrative purposes.)</small>
+                    </div>
+                </div>
+            </div>
         </div>
-        <input type="range" class="donation-slider" min="0" max="1000">
-    </div>
+    </section>
 
     <div id="footer-placeholder"></div>
 
-    <script src="scripts/main.js"></script>
-    <script src="scripts/involvementInteractions.js"></script>
-    <script type="module">
-        import { loadComponent } from './scripts/components.js';
-        loadComponent('#footer-placeholder', 'components/footer.html');
-      </script>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="scripts/main.js"></script> -->
+    <!-- <script src="scripts/involvementInteractions.js"></script> -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('components/header.html')
+                .then(response => response.text())
+                .then(html => {
+                    document.getElementById('header-placeholder').innerHTML = html;
+                });
+            fetch('components/footer.html')
+                .then(response => response.text())
+                .then(html => {
+                    document.getElementById('footer-placeholder').innerHTML = html;
+                });
+        });
+
+        function updateImpact(value) {
+            document.getElementById('donationValue').textContent = `$${value}`;
+            document.getElementById('simulatedDonation').textContent = `$${value}`;
+            // Dummy calculation for illustration
+            document.getElementById('plasticCounter').textContent = (value * 0.5).toFixed(1); // Example: 0.5 kg per dollar
+            document.getElementById('treeEquivalent').textContent = Math.floor(value / 10); // Example: 1 tree per $10
+        }
+        // Initialize impact simulator display
+        updateImpact(document.getElementById('donationSlider').value);
+    </script>
 </body>
 </html>
