REady for production

--- a/contact.html
+++ b/contact.html
@@ -33,15 +33,19 @@
             font-family: 'Poppins', sans-serif;
         }    </style>
 </head>
-<body>
-    <!-- Navigation -->
+<body>    <!-- Navigation -->
     <div id="header-placeholder"></div>
 
     <!-- Contact Hero -->
-    <header class="py-5 bg-light">
-        <div class="container text-center">
-            <h1 class="display-4">Get in Touch</h1>
-            <p class="lead">Have questions? We\'d love to hear from you.</p>
+    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/ministry/5.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
+        <div class="container">
+            <h1 class="display-4 fw-bold animate-slide-up">Get in <span class="text-primary">Touch</span></h1>
+            <p class="lead">Have questions? We'd love to hear from you and discuss how we can work together</p>
+        </div>
+        
+        <!-- Scroll indicator -->
+        <div class="position-absolute bottom-0 start-50 translate-middle-x mb-4">
+            <i class="bi bi-chevron-down text-white scroll-indicator"></i>
         </div>
     </header>
 
