--- a/projects.html
+++ b/projects.html
@@ -27,17 +27,21 @@
         })();
     </script>
 </head>
-<body>
-    <!-- Navigation -->
+<body>    <!-- Navigation -->
     <div id="header-placeholder"></div>
 
     <!-- Projects Hero -->
-    <section class="py-5 text-center bg-success text-white">
+    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/Site_pics/20250501_171409.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
         <div class="container">
-            <h1 class="display-4" data-aos="fade-up">Our Projects</h1>
-            <p class="lead" data-aos="fade-up" data-aos-delay="100">Transforming communities through sustainable waste management initiatives.</p>
+            <h1 class="display-4 fw-bold animate-slide-up">Our <span class="text-primary">Projects</span></h1>
+            <p class="lead">Transforming communities through sustainable waste management initiatives</p>
         </div>
-    </section>
+        
+        <!-- Scroll indicator -->
+        <div class="position-absolute bottom-0 start-50 translate-middle-x mb-4">
+            <i class="bi bi-chevron-down text-white scroll-indicator"></i>
+        </div>
+    </header>
 
     <!-- Project Categories -->
     <section class="py-5">
