Ready for production

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section with Integrated Menu -->
-    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/MRF/bottletops.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
+    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/Dumpsite/20250501_165620.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
         <div class="container">
             <h1 class="display-4 fw-bold animate-slide-up">Our Journey in <span class="text-primary">Sustainable Change</span></h1>
             <p class="lead">Yes, we are building a cleaner future through community-driven initiatives</p>
@@ -225,8 +225,8 @@
                     <div class="card h-100 text-center border-0 shadow-sm">
                         <div class="card-body p-4">
                             <div class="mb-3">
-                                <i class="bi bi-heart-fill fs-1 text-danger"></i>
-                            </div>                            <h5 class="card-title">Gender Equality</h5>
+                                <i class="bi bi-heart-fill fs-1 text-primary"></i>
+                            </div>                            <h5 class="card-title">Marginalized Communities</h5>
                             <p class="card-text">We champion equal opportunities for women and marginalized communities, ensuring their voices lead the transformation in waste management and economic empowerment.</p>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                     <div class="card h-100 text-center border-0 shadow-sm">
                         <div class="card-body p-4">
                             <div class="mb-3">
-                                <i class="bi bi-leaf-fill fs-1 text-success"></i>
+                                <i class="bi bi-recycle fs-1 text-success"></i>
                             </div>
                             <h5 class="card-title">Environmental Stewardship</h5>
                             <p class="card-text">We are committed to protecting our planet through innovative recycling solutions and sustainable practices.</p>
@@ -246,8 +246,9 @@
                     <div class="card h-100 text-center border-0 shadow-sm">
                         <div class="card-body p-4">
                             <div class="mb-3">
-                                <i class="bi bi-lightbulb-fill fs-1 text-warning"></i>
-                            </div>                            <h5 class="card-title">Community Innovation</h5>
+                                <i class="bi bi-lightbulb-fill fs-1 text-primary"></i>
+                            </div>                            
+                            <h5 class="card-title">Innovation</h5>
                             <p class="card-text">We support and amplify local innovations, believing that the best solutions come from within the communities that understand their challenges best.</p>
                         </div>
                     </div>
