--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Contact Hero -->
-    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/ministry/5.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
+    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/Dumpsite/20250501_170851.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
         <div class="container">
             <h1 class="display-4 fw-bold animate-slide-up">Get in <span class="text-primary">Touch</span></h1>
             <p class="lead">Have questions? We'd love to hear from you and discuss how we can work together</p>
