--- a/get-involved.html
+++ b/get-involved.html
@@ -30,7 +30,7 @@
      <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/MRF/GJenge-229_2__1.png') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
+    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/Dumpsite/20250501_171025.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
         <div class="container">
             <h1 class="display-4 fw-bold animate-slide-up">Make a <span class="text-primary">Difference</span></h1>
             <p class="lead">Choose how you want to contribute to a sustainable future through community empowerment</p>
