--- a/our-work.html
+++ b/our-work.html
@@ -31,7 +31,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/MRF/Plastic_washing_line.png') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
+    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/Dumpsite/20250501_165621.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
         <div class="container">
             <h1 class="display-4 fw-bold animate-slide-up">Building <span class="text-primary">Circular Systems</span></h1>
             <p class="lead">Transforming plastic waste into valuable resources through innovative recycling processes</p>
@@ -65,7 +65,7 @@
                         <img src="images/MRF/bottletops.jpg" class="card-img-top img-cover-200" alt="Women in recycling">
                         <div class="card-body">
                             <h5 class="card-title">Gender Equality in Recycling</h5>
-                            <p class="card-text">Our programs specifically focus on empowering women entrepreneurs in the recycling sector, creating leadership opportunities and sustainable income streams that transform entire families and communities.</p>
+                            <p class="card-text">Our programs focus on empowering women entrepreneurs in the recycling sector, creating leadership opportunities and sustainable income streams that transform entire families and communities.</p>
                         </div>
                     </div>
                 </div>
