--- a/mrf-strategy.html
+++ b/mrf-strategy.html
@@ -403,7 +403,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/MRF/Crushers.png') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
+    <header class="position-relative py-5 text-center text-white" style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/Dumpsite/20250501_172302.jpg') center/cover no-repeat; min-height: 80vh; display: flex; align-items: center; justify-content: center;">
         <div class="container">
             <h1 class="display-4 fw-bold animate-slide-up">Material Recovery Facility <span class="text-primary">Strategy</span></h1>
             <p class="lead">Scaling sustainable waste management systems through strategic partnerships and community empowerment</p>
